[package]
name = "skydd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4"
matrix-sdk = "0.5.0"
tokio = { version = "1.21.1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
