[package]
name = "skydd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features =["tokio"] }
matrix-sdk = "0.6.0"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
async-trait = "0.1.57"
dirs = "4.0.0"
url = "2.3.1"
